# TakeHomeTask-CoreEdgeSolution

./: README.md
ai-voice-agent-tool/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
backend/: .env  .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/api/v1/: dependencies.py
backend/app/api/v1/routers/: _retell_common.py  agent_webhook.py  agents.py  agents_supabase.py  analytics_pipecat.py  calls.py  conversations.py  dev_diag.py  llm_webhook.py  metrics.py  pipecat_adapter.py  pipecat_events.py  pipecat_metrics.py  results.py  retell_webhook.py  voice.py  voice_start.py  webhooks.py
backend/app/core/: config.py  logging.py
backend/app/domain/entities/: agent.py  call_log.py  driver.py  feedback.py
backend/app/domain/interfaces/: agent_repo.py  call_repo.py  retell_client.py
backend/app/infrastructure/db/: base.py  session.py
backend/app/infrastructure/repositories/: agent_repo_sql.py  call_repo_sql.py
backend/app/middleware/: error_handler.py  request_id.py  request_timing.py
backend/app/schemas/: agent.py  call.py
backend/app/services/: agent_service.py  agents_repo.py  call_service.py  calllog_repo.py  drivers_repo.py  metrics_service.py  postprocess.py  supabase.py
backend/app/vendors/: base.py  factory.py  pipecat_vendor.py  retell_vendor.py
backend/myenv/: pyvenv.cfg
backend/myenv/Scripts/: activate  activate.bat
pipecat_bot/: .env  .gitignore  bot.py
(+28 files in other folders)
